backend-rules/ingress-echo-color-ingress-resource.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:  
  name: ingress-blue-green
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:  
 rules:
  - http:
      paths:
      - path: /blue
        backend:
          serviceName: blue
          servicePort: 80
      - path: /green
        backend:
          serviceName: green
          servicePort: 80
